src/objects/Revenue_Recognition_Schedule__c.object
<CustomObject>
    <description>This object holds the revenue schedules related to manual revenue recognition rules</description>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <inlineHelpText>If the Revenue Recognition Rule date is Service Start Date, and the month # value is 1, then the the first revenue % will be recognized in the same month as the service start date. If the value is 2, then this will be recognized the next month and so on.</inlineHelpText>
        <label>Month #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Percent__c</fullName>
        <label>Revenue %</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_Rule__c</fullName>
        <label>Revenue Recognition Rule</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Revenue Recognition Schedules can be created only for Manual Recognition rules</errorMessage>
            <filterItems>
                <field>Revenue_Recognition_Rule__c.Recognition_Type__c</field>
                <operation>equals</operation>
                <value>Manual Recognition</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Revenue_Recognition_Rule__c</referenceTo>
        <relationshipLabel>Revenue Recognition Schedules</relationshipLabel>
        <relationshipName>Revenue_Recognition_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Schedule_Date__c</fullName>
        <label>Schedule Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Schedule_for_Sorting__c</fullName>
        <formula>VALUE(Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule # for Sorting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Revenue Recognition Schedule</label>
    <nameField>
        <label>Revenue Recognition Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Recognition Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>